--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -10,12 +10,25 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+
+  --fade-in: fade-in 0.5s ease-in-out 1;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #112413;
     --foreground: #ededed;
+  }
+}
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
+    transform: translateY(10px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
   }
 }
 
